2007-05-21  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (calendar_window_tree_selection_changed): new,
	unselect the selection in other treeviews than the newly selected one
	(create_task_list): connect to the selection changed signal
	(create_list_for_appointment_model): ditto
	(create_appointment_list): updated
	(create_birthday_list): ditto
	(create_weather_list): ditto

2007-05-21  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (format_time): don't check that the time format
	is CLOCK_FORMAT_12 or CLOCK_FORMAT_24 and just assume it is.
	(calendar_window_class_init): initialize time format with
	clock_locale_format()
	(calendar_window_set_time_format): if new time format is not
	CLOCK_FORMAT_12 or CLOCK_FORMAT_24, then set it with
	clock_locale_format()

2007-05-21  Vincent Untz  <vuntz@gnome.org>

	Move the calendar popup code in a new file.
	Implement saving of the state of appointment expanders in gconf.

	* Makefile.am: add new files, generate clock-typebuiltins.[ch]
	* calendar-window.[ch]: new GtkWindow-derived widget, that implements
	the calendar popup. Based on code from clock.c (which has been of
	course removed)
	* clock.h: new, with stuff from clock.c needed by CalendarWindow
	* clock.schemas.in: add new gconf keys for the state of expanders
	* clock.c: (destroy_clock): remove now unneeded code
	(create_calendar): simplify, now only creates a CalendarWindow
	(update_popup): updated
	(format_changed): update CalendarWindow
	(gmt_time_changed): update CalendarWindow
	(show_week_changed): update CalendarWindow
	(fill_clock_applet): updated

2007-05-20  Vincent Untz  <vuntz@gnome.org>

	Have separate treeviews for appointments, birthdays and weather.
	Use GtkExpander to let the user hide them.
	Fix most of bug #165732
	Based on patch by Priit Laes <amd@store20.com>

	* Makefile.am: prepare for installation of some icons, even if we
	don't install some right now. This might get reverted later.