@@ -1,3 +1,8 @@
+2007-05-21  Sebastien Bacher  <seb128@ubuntu.com>
+
+	* calendar-client.c: (calendar_client_foreach_appointment_day):
+	mark multiple days events correctly (Closes: #440184)
+
 2007-05-21  Vincent Untz  <vuntz@gnome.org>
 
 	* calendar-window.c: (calendar_window_tree_selection_changed): new,
